# agent

./: .gitattributes  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: CI.yml
.plan/: 0000.todo.md
.specstory/history/: 2026-03-10_01-12Z-rust-项目缺乏测试的原因.md  2026-03-10_01-34Z-github-action-中的-node-js-模块错误.md  2026-03-10_02-37Z-重写-readme-md-文件内容.md
__test__/: index.spec.ts
examples/: basic.ts  chat.ts
src/: agent.rs  lib.rs
src/openai/: mod.rs  proto.rs  sse.rs
src/tool/: glob_tool.rs  mod.rs  read_file.rs  shell.rs
