
[package]
authors = ["elonehoo"]
edition = "2021"
name = "agent"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["tokio_rt"] }
napi-derive = "3.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "process", "io-util"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
glob = "0.3"
backoff = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
